testData/diagnostics/integer_overflow.diag.txt
testData/diagnostics/integer_overflow.nut line = (1) column = (8) : error: integer constant overflow
println(1000000000000000000000000000000000000000)
        ^---------------------------------------

